--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,7 @@
 @import './reset.scss';
 @import './bio.scss';
 @import './certificate.css';
-@import './education.css';
+@import './education.scss';
 @import './internExperience.scss';
 @import './openSource.scss';
 @import './others.css';
